--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,13 @@ section {
   background-color: #141617;
   border-radius: 10px;
   padding: 40px 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+}
+
+.why-choose-section img{
+  display: flex;
+  width: 600px;
+  justify-content: center;
+  margin-left: 25%;
 }
 
 .getting-started-section h2,
@@ -263,7 +269,6 @@ section {
   background-color: #141617;
   border-radius: 10px;
   padding: 40px 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   text-align: center;
 }
 
