--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,12 @@ html {
   margin-top: 60px;
   font-size: 10rem;
   color: #1ad1a7;
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .App-header h1 {
