--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,7 @@ html {
   color: #1ad1a7;
   font-size: 1rem;
   padding: 8px 15px;
-  transition:
-    color 0.3s,
-    background-color 0.3s,
-    transform 0.3s;
+  transition: color 0.3s, background-color 0.3s, transform 0.3s;
 }
 
 .navbar li:hover {
@@ -200,9 +197,7 @@ section {
   width: 260px;
   color: #ffffff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-  transition:
-    transform 0.3s,
-    box-shadow 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s;
   text-align: left;
 }
 
@@ -298,9 +293,7 @@ section {
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
-  transition:
-    background-color 0.3s,
-    transform 0.3s;
+  transition: background-color 0.3s, transform 0.3s;
 }
 
 .calculator-section button:hover {
@@ -334,9 +327,7 @@ section {
 .contact-icon:hover {
   color: #13b28c;
   transform: scale(1.05);
-  transition:
-    background-color 0.3s,
-    transform 0.3s ease;
+  transition: background-color 0.3s, transform 0.3s ease;
 }
 
 /* Animation for News Images */
