--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@ html {
   overflow-y: scroll;
   scroll-behavior: smooth;
   scrollbar-width: none;
-  background-image: url('/public/Images/background.png'); /* Path ke gambar */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/public/Images/background.png"); /* Path ke gambar */
   background-size: cover; /* Agar gambar menutupi seluruh elemen */
   background-position: center; /* Gambar berada di tengah */
   background-repeat: no-repeat; /* Hindari pengulangan gambar */
@@ -38,7 +39,7 @@ html {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #141617;
+  background-color: rgba(20, 22, 23, 0.95);
   padding: 15px 0;
   display: flex;
   justify-content: center;
@@ -114,7 +115,8 @@ section {
 .getting-started-section,
 .why-choose-section,
 .contact-section {
-  background-color: #141617f6;  /* background color with opacity */
+  /* background-color: #141617f6; background color with opacity */
+  background-color: rgba(20, 22, 23, 0.85);
   padding: 40px 20px;
 }
 
@@ -207,7 +209,7 @@ section {
 
 /* News Section */
 .news-section {
-  background-color: #141617f6; /* background color with opacity */
+  background-color: rgba(20, 22, 23, 0.85); /* background color with opacity */
   padding: 40px 0;
   overflow-x: auto;
   scrollbar-width: thin;
@@ -263,7 +265,7 @@ section {
 /* Crypto Prices Section */
 .crypto-section {
   padding: 40px 0;
-  background-color: #141617f6; /* background color with opacity */
+  background-color: rgba(20, 22, 23, 0.85); /* background color with opacity */
 }
 
 .crypto-slider {
@@ -272,7 +274,7 @@ section {
 }
 
 .crypto-card {
-  background-color: #141617; 
+  background-color: #141617;
   padding: 10px;
   text-align: center;
   color: #ffffff;
@@ -296,7 +298,7 @@ section {
 
 /* Enhanced Calculator Section */
 .calculator-section {
-  background-color: #141617f6; /* background color with opacity */
+  background-color: rgba(20, 22, 23, 0.85); /* background color with opacity */
   padding: 40px 20px;
   text-align: center;
 }
